--- a/app/assets/stylesheets/helpdesk/admin.css.scss
+++ b/app/assets/stylesheets/helpdesk/admin.css.scss
@@ -4,6 +4,8 @@
  *= require helpdesk/admin/tickets
  *= require_self
  *= require_tree ./admin
+ *= require helpdesk/custom_admin
 */
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
